--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
           <img
             class="imagem-personagem"
-            src="./Meu Projeto/src/css/imagens/seuclope.png"
+            src="./src/imagens/seuclope.png"
             alt="Seu Clope"
           />
 
